--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "phosphor-react-native": "^2.2.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-icons": "^0.7.1",
+    "react-native-typography": "^1.4.1",
+    "react-native-vector-icons": "^10.2.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
   "private": true
