--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.28",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.27",
     "phosphor-react-native": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
