--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.28",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.27",
+    "nativewind": "^4.1.16",
     "phosphor-react-native": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-reanimated": "^3.15.5",
+    "react-native-safe-area-context": "^4.11.0",
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^10.2.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.3.3"
   },
   "private": true
