--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "~51.0.28",
@@ -20,7 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-reanimated": "^3.15.5",
-    "react-native-safe-area-context": "^4.11.0",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^10.2.0",
     "styled-components": "^6.1.13",
